@@ -2209,6 +2209,7 @@ eBBlockFromiCode (iCode * ic)
   ic = iCodeLabelOptimize (iCodeFromeBBlock (ebbi->bbOrder, ebbi->count));
   if (optimize.lospre && (TARGET_Z80_LIKE || TARGET_HC08_LIKE || TARGET_IS_STM8)) /* Todo: enable for other ports. */
     lospre (ic, ebbi);
+  dumpEbbsToFileExt (DUMP_LOSPRE, ebbi);
   /* Break down again and redo some steps to not confuse live range analysis. */
   ebbi = iCodeBreakDown (ic);
   computeControlFlow (ebbi);
